# Projeto-Final-Sistema-Anti-Furto

./: .gitignore  API_TESTING_GUIDE.md  DockerFile  QUICK_START.md  Teste_API.txt  config.yaml  diagnostics_report.json  docker-compose-cloud.yml  docker-compose.yml  local_api.db  main.py  package-lock.json  pyproject.toml  requirements.txt  start-services.ps1  test_api.ps1  test_api.py
API/: main_api.py
Alertas/: alert_system.py  database_handler.py  database_manager.db
Alertas/history/: eventos_20260415_121846.json  eventos_20260429_094356.json  eventos_20260430_171027.json  (+7 more)
Atividades_Suspeitas/: __init__.py  hand_proximity_detector.py  posture_detector.py
Backend/: Dockerfile  local_api.db  main_api.py  requirements.txt
Backend/app/: database.py  (+2 more)
Detecao/: __init__.py  detector_factory.py  mmpose_detector_impl.py  onnx_detector_impl.py
Edge/: AGENTS.md  __init__.py  alertas_oficial.db  config.yaml  dados_oficial.db  dispatcher.py  main.py  requirements.txt  teste_edge.py
Train/: losses.py  run_phase4_example.py
Visualizar_Data/: check_files.py  generate_video_clips.py  test_skeleton_normalization.py
dashboard-antifurto/: Dockerfile  index.html  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json
models/: activity_classifier.pth  detail.json  pipeline.json
pipeline/: __init__.py  activity_loader.py  config.py  orchestrator.py  skeleton_visualizer.py  spatial_normalizer.py  video_source.py
projeto_anti_furto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: web_app.py
web_test/: web_app.py
(+92 files in other folders)
