[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-anti-furto"
version = "1.0.0"
description = "Sistema Anti-Furto com Edge, Frontend e Backend distribuídos"
authors = [{name = "Seu Nome", email = "seu.email@example.com"}]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
edge = [
    "opencv-python>=4.8.0",
    "mmpose>=1.1.0",
    "onnxruntime>=1.16.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Edge*", "dashboard-antifurto*"]
